_sass/_custom.scss
/* 
    Put your custom SCSS here!
    This allows you to override any CollectionBuilder or Bootstrap CSS without modifying the base theme files directly.
*/
/* color */
$primary: #255b77;
$secondary: #acd4dc;
$success:  #f3c17b;
$info: #bd8364;
$danger: #c84b4e;

.light-blue {
    background-color: $secondary !important;
    border-color: $secondary;
    outline-color: $secondary;
}
.blue-outline {
    color: $primary !important;
}
.blue {
    background-color: $primary !important;
}
/* font */

@import url('https://fonts.googleapis.com/css2?family=Monda:wght@400..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap');
body {
    font-family:Verdana, Geneva, Tahoma, sans-serif
}


h1 ,h2, h3, h4, h5 {
    font-family: overpass, sans-serif;
}
h1 {
    font-size: 1.75rem;
}
h2 {
    font-size: 1.5rem;
}
h3 {
    font-size: 1.25rem;
}

/* general links */
p, dd, tr {
    a {
        color: $primary;
        
        
    }
    a:hover {
        color: $info;
        text-decoration: underline;
   }
}
.field-value {
    a {
        color: $primary;
        
        
    }
    a:hover {
        color: $info;
        text-decoration: underline;
   }
}
.mural-link {
    max-width: 200px;
    font-family: overpass;
    font-size: 2rem;
    text-transform: uppercase;
    box-shadow: 5px -5px $danger;
    a:hover {
        
            text-decoration: underline;
            
        
    }
}

/* toc */
.toc-link {
    a {
        color: $lapis-lazuli !important;
    }
    a:hover {
        font-style: italic !important;
    }
}

/* button */
.btn-primary {
    background-color:$info;
    border-color: $info;
    outline-color: $info;
  }

.btn-primary:active, .btn-primary:hover {
    background-color: $danger;
    border-color: $danger;
}

#browseOptions {
    margin-bottom: 0.25rem !important;
}

#searchbar {
    margin-bottom: .5rem;
}

#browseSortButton {
    font-size: 1.2rem;
    float: right;
}

#numberOf {
    text-align: center;
    margin-bottom: 1rem;
}

.btn:focus {
    outline: none;
    box-shadow: none;
}

/* nav */
.nav-font {
    font-size: 1rem;
    padding: 10px;
    text-align: center;
}

.dropdown-item {
    font-size: 1rem;
    padding: 10px;
}

.dropdown-item {
    font-size: 1rem;
    padding: 10px;
}

.nav-gutter {
    --bs-gutter-x: 0rem;
}

#nav-link-container {
    justify-content: right;
    margin-right: 0;
}

.navbar-toggler {
    margin: 15px;
    width: 100%;
    text-align: center;
    padding: 0.5rem;
    float: right;
}
@media (min-width: 400px) { 
    .navbar-toggler {
        width: 3rem;
    }
 }

.nav-title-link {
    color: white;

}
.nav-title-link:hover {
    color: white;
    
}
.nav-title {
    h1 {
        font-family: Overpass;
    }
}
/* media query changes font once links are in dropdown mode */

/* nav bar dropdown customization */
.dropdown-item {
    font-size: 1rem;
}

.dropdown-menu {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    max-width: 20rem;
}

@media (min-width: 992px){
    .dropdown-menu {
        position: relative;
        left: -50% !important;
    }

    .dropdown-item {
        font-size: 0.75rem;
    }
}

/* dropdown style */
.dropdown-item:active {
    background-color: $success;
    color: black;
    
}
.dropdown-item:hover {
    background-color: $success;
    color: black;
}
.dropdown-menu {
    .active {
        background-color: $success; 
        color: black;
    }
    
    
}
/* card */
.card {
    h2 {
        font-size: 1.5rem;
    }
    
}
.no-border {
    border: none;
}


.img-card {
    position:relative;
    right: 16px;
    img {
    border-radius: 0.25rem 0.2rem 0 0 !important;
    }
    
    

}
.display-card {
    height: auto;
    max-height: 200px;
}
.card-body {
    height: auto;
    max-height: 400px;
}
@media only screen and (max-width: 991px) {
    .card-img-top {
        height: auto;
        max-height: 400px;
    }
}
/* footer */
.contact {
    color: white; 
    text-decoration: underline;
}

/* Blockquote styles */
blockquote {
    display: block;
    border-left: 4px solid $secondary;
    background-color: transparentize($color: $secondary, $amount: 0.75);
    padding: 0 0 0 1.5rem;
}

/* Make text content width more narrow */
#maincontent {
    p, h1 ,h2, h3, h4, h5, blockquote, ul, ol {
        max-width: 45rem;
        margin-left: auto;
        margin-right: auto;
    }
    .card {
        max-width: 45rem;
        margin-left: auto;
        margin-right: auto;
    }
}

